# PicSOM

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  Makefile.in  NOTICE  README.md  configure  configure.ac  ubuntu-packages.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
databases/caffe/: settings.xml
databases/caffe/caffe/models/ResNet-101/: model  prototxt
databases/caffe/caffe/models/ResNet-152/: model  prototxt
databases/caffe/caffe/models/ResNet-50/: model  prototxt
doc/: AUTHORS  COPYING  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  configure  configure.ac  d2i-m_rest_api.html  databases.texi  dbstruct.fig  dbstruct.txt  features.texi  image-zones.fig  image-zones.txt  mugshot-eye.fig  mugshot-eye.txt  picsom-api-doc.html  picsom.texi  segments.fig  segments.txt
doc/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
java/lucene/: ChangeLog  PicSOMLucene.java  PicSOMLucene3.java  picsom-lucene
js/: ChangeLog  picsom.js
matlab/: bin2mat.m
octave/pinview/: Makefile  distance.m  eye_movement_examples_newregressor.csv  featureVecHeatMapNormalized.mat  invlemma.m  likeliFunc.m  likeliFuncMKLDist.m  lin_kernel.m  linrelMKL3.m  mkl3.m  mkltrain.m  norm2.m  normalise_data.m  pinview_cbirround.m  probDnVectorized.m  randpMatlab.m  rrmkl.m  rrmkltrain.m  samplingPosterior.m  simPolynomialLoop.m  simPolynomialMKLDist.m  simPolynomialVectorized.m  simulate_eye.m  smo_train.m  tensorprojection.m
python/: numpy2bin.py
scripts/: condor-stub  download-caffe-resnet-models  picsomd  pinview  pinview-flickr  pinview-replay  pinview-task82  qsub-stub  sbatch-stub
share/ColorSIFT/: trecvid2010-random100.cdb.tab  trecvid2010-random100dense.cdb.tab  trecvid2010-random100sift.cdb.tab  trecvid2010-random100siftdense.cdb.tab
share/lscom/: lscom.map
speech/: README  adapt.sh  osrs-wrap.C  pinview_rec.sh
speech/adapt/cfgs/: template.cfg  wsj0_ml_pronaligned_tied1_gain3500_occ200_20.2.2010_22.cfg
speech/adapt/phns/: tags.phn
speech/adapt/spkcs/: default_mllr.spkc
speech/aku/: align  mllr
speech/online-demo/: decoder  recognizer
src/: Analysis.C  Analysis.h  COPYING  CbirAlgorithm.C  CbirAlgorithm.h  CbirExample.C  CbirExample.h  CbirGVT.C  CbirGVT.h  CbirPicsom.C  CbirPicsom.h  CbirPinView.C  CbirPinView.h  CbirRandom.C  CbirRandom.h  CbirStageBased.C  CbirStageBased.h  ChangeLog  Connection.C  Connection.h  DataBase.C  DataBase.h  DummyIndex.C  DummyIndex.h  Index.C  Index.h  InvertedIndex.C  InvertedIndex.h  LICENSE.txt  Makefile.am  Makefile.in  ModifiableFile.h  NEWS  PicSOM.C  PicSOM.h  PicSOMserver.C  PicSOMserver.h  PmSVM.C  PmSVM.h  PreCalculatedIndex.C  (+56 more)
src/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/cox/: ChangeLog  blas  classifier  demangle  knn  labeled  labeled_vector  lsc  matlab  matrix  sompak  stat  subspace  tictac
src/features/: AudioBased.C  AudioBased.h  AudioFreq.C  AudioFreq.h  AvgAudioEnergy.C  AvgAudioEnergy.h  CVC.C  CVC.h  Caffe.C  Caffe.h  Cepstrum.C  Cepstrum.h  ChangeLog  ColM.C  ColM.h  ColorLayout.C  ColorLayout.h  ColorSIFT.C  ColorSIFT.h  Colour.C  Colour.h  ContourFD.C  ContourFD.h  DominantColor.C  DominantColor.h  Dummy.C  Dummy.h  EdgeCooccurence.C  EdgeCooccurence.h  EdgeFourier.C  EdgeFourier.h  EdgeHist.C  EdgeHist.h  EdgeHistogram.C  EdgeHistogram.h  ExtBatch.C  ExtBatch.h  External.C  External.h  ExternalSound.C  (+84 more)
src/image/: ChangeLog  imagecolor.h  imagedata.C  imagedata.h  imagefile-opencv.C  imagefile-unimpl.C  imagefile.h  imagescaling.h  videofile.C  videofile.h
src/segmentation/: AddDescription.C  AddDescription.h  AlignmentMarks.C  AlignmentMarks.h  Binarise.C  Binarise.h  ByTypicality.C  ByTypicality.h  ChainCode.C  ChainCode.h  ChainVisualiser.C  ChainVisualiser.h  ChangeLog  ConnectedKMeans.C  ConnectedKMeans.h  ConstBackground.C  ConstBackground.h  CreateThumbnail.C  CreateThumbnail.h  CropEdges.C  CropEdges.h  DisplayResults.C  DisplayResults.h  EndBlocker.C  EndBlocker.h  FLandmark.C  FLandmark.h  FaceParts.C  FaceParts.h  FeatureInterface.h  FilterCentral.C  FilterCentral.h  FilterbyBoundingbox.C  FilterbyBoundingbox.h  FilterbyColor.C  FilterbyColor.h  GKMeans.C  GKMeans.h  GenerateHeatmap.C  GenerateHeatmap.h  (+72 more)
src/simple/: ChangeLog  Classifier.C  Classifier.h  ConfusionMatrix.C  ConfusionMatrix.h  DataSet.C  DataSet.h  DecayVar.h  FigFile.h  GnuPlot.C  GnuPlot.h  Histogram.C  Histogram.h  List.C  List.h  Matrix.C  Matrix.h  OptVar.h  Planar.h  Point.C  Point.h  RandVar.C  RandVar.h  SOM.C  SOM.h  Simple.C  Simple.h  SimpleComplex.h  Source.C  Source.h  StatQuad.h  StatVar.h  SubSpace.C  SubSpace.h  Transformation.h  TreeSOM.C  TreeSOM.h  Vector.C  Vector.h  VectorSet.C  (+5 more)
xsd/: ChangeLog  object.xsd  picsom.xsd  tssom.xsd
xsl/: ChangeLog  picsom-sisc.xsl  picsom-tobii.xsl  picsom.xsl
