##
## Copyright 1998-2017 PicSOM Development Group
##

# @(#)$Id: configure.ac,v 1.2 2015/11/11 08:15:57 jorma Exp $

AC_INIT(PicSOM, 0.1, picsom@cis.hut.fi)
AM_INIT_AUTOMAKE([subdir-objects])
LT_INIT([disable-static])

AC_PREREQ(2.59)
AC_COPYRIGHT(PicSOM Development Group)
AC_REVISION($Revision: 1.2 $)

AC_CONFIG_SRCDIR([NEWS])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_SUBDIRS(src doc)

AC_OUTPUT
