##
## Copyright 1998-2018 PicSOM Development Group
##

# @(#)$Id: configure.ac,v 1.7 2018/12/19 11:41:18 jormal Exp $

AC_INIT(PicSOM, 0.1, picsom@cis.hut.fi)
AM_INIT_AUTOMAKE([subdir-objects])
LT_INIT([disable-static])

AC_PREREQ(2.59)
AC_COPYRIGHT(PicSOM Development Group)
AC_REVISION($Revision: 1.7 $)

AC_CONFIG_SRCDIR([NEWS])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_SUBDIRS(src doc)

AC_OUTPUT
